examples/test/testpolicy17053.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17053
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key49: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value18
          key25: value8
          key17: value26
      podSelector:
        matchLabels:
          key43: value47
